IVYPORTAL-10417: Adapt Link Colours and Task widget colours II - Fixed style on IE - Fixed advanced filters on small screens

--- a/AxonIvyPortal/PortalStyle/webContent/resources/css/portal-variables.css
+++ b/AxonIvyPortal/PortalStyle/webContent/resources/css/portal-variables.css
@@ -26,6 +26,7 @@
   --ivy-tertinary-color-yellow-dark: hsl(46, 100%, 58%);
   --ivy-tertinary-color-yellow-medium: hsl(49, 99%, 65%);
   --ivy-tertinary-color-yellow-light: hsl(47, 100%, 79%);
+  --ivy-portal-blue-light: #90DDE9;
 
   --accent-color: rgba(144, 221, 233, 0.24);
   --accent-text-color: var(--primary-dark-text-color);
@@ -112,6 +113,7 @@
   --widget-header-input-hover-background-color: transparent;
   --widget-header-font-size: 1.8rem;
   --widget-header-font-weight: bold;
+  --widget-header-mobile-border-bottom: var(--ivy-primary-color-grey-light);
   
   /* Portal Card */
   --card-box-shadow: 0px 4px 16px rgba(27, 27, 27, 0.16);
